# table-screenshot-to-csv

./: .gitignore  .ruff.toml  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: compose.yml  devcontainer.json  py.Dockerfile
table-screenshot-to-csv/: pyproject.toml
table-screenshot-to-csv/table_screenshot_to_csv/src/: _preprocess_image.py
table-screenshot-to-csv/table_screenshot_to_csv/tests/: test_preprocess_image.py
table_screenshot_to_csv/src/: _preprocess_image.py
table_screenshot_to_csv/tests/: test_preprocess_image.py
