[project]
name = "table_screenshot_to_csv"
version = "0.1.0"
authors = [{"name" = "Andy Weaver", "email" = "andrew_weaver@cinfin.com"}]
description="Reads a screenshot of a table, return a csv of the table data."
readme="README.md"
license={file="LICENSE"}
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Data Scientists",
  "Topic :: Natural Language Processing",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]